@@ -5,7 +5,7 @@
  * under the terms of the GNU General Public License. See doc/COPYING
  * for more information.
  *
- * $Id: bsd.c,v 1.1 2001-06-02 20:25:52 cmatsuoka Exp $
+ * $Id: bsd.c,v 1.2 2007-10-07 22:51:43 cmatsuoka Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -56,7 +56,7 @@ struct xmp_drv_info drv_bsd = {
     dummy,		/* setnote */
     xmp_smix_setpan,	/* setpan */
     dummy,		/* setbend */
-    dummy,		/* seteffect */
+    xmp_smix_seteffect,	/* seteffect */
     dummy,		/* starttimer */
     dummy,		/* stctlimer */
     dummy,		/* reset */
